dev_ws/log/build_2020-11-18_15-34-05/tallest_buildings/stdout_stderr.log
running egg_info
creating H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info
writing H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\PKG-INFO
writing dependency_links to H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\dependency_links.txt
writing entry points to H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\entry_points.txt
writing requirements to H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\requires.txt
writing top-level names to H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\top_level.txt
writing manifest file 'H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\SOURCES.txt'
reading manifest file 'H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\SOURCES.txt'
writing manifest file 'H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info\SOURCES.txt'
running build
running build_py
creating H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build
creating H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib
creating H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings
copying tallest_buildings\client.py -> H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings
copying tallest_buildings\service.py -> H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings
copying tallest_buildings\__init__.py -> H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings
running install
running install_lib
creating H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings
copying H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings\client.py -> H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings
copying H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings\service.py -> H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings
copying H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\build\lib\tallest_buildings\__init__.py -> H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings
writing byte-compilation script 'C:\Users\artyr\AppData\Local\Temp\tmp6hhe4zef.py'
c:\opt\ros\foxy\x64\python.exe C:\Users\artyr\AppData\Local\Temp\tmp6hhe4zef.py
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings\client.py", line 40
    break
    ^
SyntaxError: invalid syntax

  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings\service.py", line 15
    1 = 'name = Burj Khalifa, country = United Arab Emirates, height = 829.8',
    ^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?

removing C:\Users\artyr\AppData\Local\Temp\tmp6hhe4zef.py
running install_data
copying resource\tallest_buildings -> H:\MyProgram\C and C++\ROS\dev_ws\install\share\ament_index\resource_index\packages
copying package.xml -> H:\MyProgram\C and C++\ROS\dev_ws\install\share\tallest_buildings
running install_egg_info
Copying H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\tallest_buildings.egg-info to H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings-0.0.0-py3.8.egg-info
running install_scripts
Installing client-script.py script to H:\MyProgram\C and C++\ROS\dev_ws\install\lib\tallest_buildings
Installing client.exe script to H:\MyProgram\C and C++\ROS\dev_ws\install\lib\tallest_buildings
Installing service-script.py script to H:\MyProgram\C and C++\ROS\dev_ws\install\lib\tallest_buildings
Installing service.exe script to H:\MyProgram\C and C++\ROS\dev_ws\install\lib\tallest_buildings
writing list of installed files to 'H:\MyProgram\C and C++\ROS\dev_ws\build\tallest_buildings\install.log'
